<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal" >

    <View
        android:id="@+id/top_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#DDFFFFFF" >
    </View>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_separator"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/warning"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </TextView>

    <View
        android:id="@+id/bottom_separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/message"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#DDFFFFFF" >
    </View>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message"
        android:layout_below="@+id/bottom_separator"
        android:text="@string/dont_show" />

    <Button
        android:id="@+id/close"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkbox"
        android:layout_alignBottom="@+id/checkbox"
        android:layout_alignRight="@+id/message"
        android:text="@string/close" />

</RelativeLayout>
